--- a/projects/slide-to-confirm/package.json
+++ b/projects/slide-to-confirm/package.json
@@ -11,6 +11,7 @@
     "@angular/core": "^8.2.14"
   },
   "dependencies": {
-    "@angular/cdk": "^13.2.0"
+    "@angular/cdk": "^13.2.0",
+    "tslib": "^2.0.0"
   }
 }
