--- a/projects/slide-to-confirm/package.json
+++ b/projects/slide-to-confirm/package.json
@@ -7,8 +7,8 @@
     "url": "https://github.com/rinturaj/NgxSlideToConfirm"
   },
   "peerDependencies": {
-    "@angular/common": "^8.2.14",
-    "@angular/core": "^8.2.14"
+    "@angular/common": "~11.2.14",
+    "@angular/core": "~11.2.14"
   },
   "dependencies": {
     "@angular/cdk": "^13.2.0",
