--- a/projects/slide-to-confirm/package.json
+++ b/projects/slide-to-confirm/package.json
@@ -8,9 +8,7 @@
   },
   "peerDependencies": {
     "@angular/common": "~12.2.16",
-    "@angular/core": "~12.2.16"
-  },
-  "dependencies": {
+    "@angular/core": "~12.2.16",
     "@angular/cdk": "^13.2.0",
     "tslib": "^2.0.0"
   },
