feat: :sparkles: add background color to swipe component
 - update with cancel event
 - update example
 - fix docs

--- a/projects/slide-to-confirm/package.json
+++ b/projects/slide-to-confirm/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ngx-slide-to-confirm",
-  "version": "1.0.2",
+  "version": "1.0.3-0",
   "homepage": "https://github.com/rinturaj/NgxSlideToConfirm",
   "repository": {
     "type": "git",
